--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "M. Schnüriger",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "tv4": "^1.2.7",
+    "winston": "^2.1.1"
+  }
 }
