--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "M. Schnüriger",
   "license": "ISC",
   "dependencies": {
-    "tv4": "^1.2.7",
-    "winston": "^2.1.1"
+    "body-parser": "^1.14.2",
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
+    "tv4": "^1.2.7"
   }
 }
