--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.14.2",
     "debug": "^2.2.0",
     "express": "^4.13.4",
+    "ipaddr.js": "^1.1.0",
     "nconf": "^0.8.4",
     "tv4": "^1.2.7"
   }
