--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "M. Schnüriger",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "^1.14.2",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "ipaddr.js": "^1.1.0",
     "nconf": "^0.8.4",
+    "node-jose": "^0.7.1",
     "tv4": "^1.2.7"
   }
 }
